src/style.css
/*homepage*/

.title{
    font-weight: 900;
    font-family: Helvetica;
    font-size: 56px;
    margin: 4vh 0px 0px 0px;
    text-align: center;
    
}

.titleLink{
    font-weight: 900;
    font-family: Helvetica;
    font-size: 56px;
    margin: 4vh 0px 0px 0px;
    text-align: center;
    color:black;
}

#splashWrapper{
    display: flex;
    flex-direction: column;
    width: 60vw;
    margin: 6vw auto 0 auto;
    align-items: center;
}

#splashImg{
    width: 40vw;
    height: auto;
}

#linkWrapper{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 5vh;
}

.link{
    margin: 5px 15px 0px 0px;
    font-size: 18px;
    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
    color: black;
    text-decoration: none;
}



.link:hover{
    cursor: pointer;
}

.thumbWrapper{
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.thumbnail{
    height: 150px;
    width: auto;
}

.thumbnail:hover{
    cursor:pointer;
}

.thumbCaption{
    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
    text-align: center;
    color: black;
    text-decoration: none;
}

.thumbCaption:hover{
    cursor: pointer;
}

#editorialWrapper{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 5vh;
}

.edThumbnail{
    height: 250px;
    width: auto;
}

a:hover, a:visited, a:link, a:active
{
    text-decoration: none;
}

/* about page */

.aboutText{
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 14px;
    height: 80vh;
    margin: 0px auto;
    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
    text-align: center;
}


/* photo gallery */

.gallery-title{
    font-weight: 700;
    font-family: Helvetica;
    font-size: 18px;
    margin: 2vw 0px 0px 2vw;
    text-align: left;
}

.arrow-left{
    display: flex;
    width: 0;
    height: 0;
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
    border-right: 10px solid black;
    margin-left: 15px;
    justify-self: center;
    
}

.arrow-right{
  width: 0; 
  height: 0; 
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  border-left: 10px solid black;
  margin-right: 15px;
}

.gallery-img{
    display: flex;
    height: 80vh;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
}

.galleryWrapper{
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 30px;
    justify-content: center;
}


.gallery-caption{
    font-family: Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
    margin-top: 10px;
}

.gallery-figure{
    display: flex;
    height: 80vh;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
}


@media only screen and (max-width: 500px){
    /* homepage */
    
    .title{
        font-weight: 900;
        font-family: Helvetica;
        font-size: 36px;
        margin: 4vh 0px 0px 0px;
        text-align: center;
        
    }
    
    
    #splashWrapper {
        display: flex;
        flex-direction: column;
        width: 90vw;
        margin: 6vw auto 0 auto;
    }    

    #linkWrapper{
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
        align-items: center;
        margin: 5vh;
    }

    /* gallery */

    .gallery-figure {
        display: flex;
        height: 80vh;
        flex-direction: column;
        align-items: center;
        margin: 0 auto;
        justify-content: center;
    }
    .galleryWrapper {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin-top: 30px;
        justify-content: center;
    }

    .gallery-img {
        display: flex;
        width: 100vw;
        flex-direction: column;
        align-items: center;
        margin: 0 auto;
    }

    .arrow-left {
        width: 0;
        height: 0;
        border-top: 10px solid transparent;
        border-bottom: 10px solid transparent;
    
    }

    .arrow-right{
        width: 0;
        height: 0;
        border-top: 10px solid transparent;
        border-bottom: 10px solid transparent;
    }


        

}

